--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "bootstrap": "^4.6.0",
-    "expressive-css": "^1.0.2",
+    "@tom-ricci/react-spacer": "^1.1.2",
+    "bootstrap": "^5.0.2",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-popper": "^1.3.11",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
+    "sass": "^1.35.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -38,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.24.0"
   }
 }
