--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-popper": "^1.3.11",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
