--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -4,8 +4,6 @@
 name: Builder
 
 on:
-  push:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -27,3 +25,10 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build
+    - run: rm ./docs -r
+    - run: mkdir ./docs
+    - run: cp ./build ./docs
+    - run: echo "www.rudrecciah.dev" > ./docs/CNAME
+    - run: git commit -m "Built App"
+    - run: git push
+    
