--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -31,6 +31,7 @@ jobs:
     - run: echo "www.rudrecciah.dev" > ./docs/CNAME
     - run: git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
     - run: git config --local user.name "github-actions[bot]"
+    - run: git add ./docs
     - run: git commit -m "Built App"
     - run: git push
     
