--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -31,6 +31,7 @@ jobs:
     # remove source files
     - run: find ./ -mindepth 1 ! -regex '^./build\(/.*\)?' -delete
     # move build to root
+    - run: lsof
     - run: mv build/* build/.* .
     # commit and push to main to be deployed with pages
     - run: git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
