--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -30,7 +30,7 @@ jobs:
     - run: echo "www.rudrecciah.dev" > ./build/CNAME
     # clean up build
     - run: find ./ -mindepth 1 ! -regex '^./build\(/.*\)?' -delete
-    - run: mv ./build ./docs -f -r
+    - run: mv ./build ./docs -f
     - run: rm ./build -r
     # commit and push to main to be deployed with pages
     - run: git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
