--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -1,5 +1,4 @@
-# This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# This workflow will do a clean install of node dependencies, cache/restore them, build the source code, and clean the repository leaving only the build
 
 name: Builder
 
@@ -31,7 +30,6 @@ jobs:
     # clean up build
     - run: find ./ -mindepth 1 ! -regex '^./build\(/.*\)?' -delete
     - run: mv ./build ./docs -f
-    - run: rm ./build -r
     # commit and push to main to be deployed with pages
     - run: git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
     - run: git config --local user.name "github-actions[bot]"
