--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -28,7 +28,10 @@ jobs:
     - run: npm run build
     - run: echo "www.rudrecciah.dev" > ./build/CNAME
     # clean up build
-    - run: find ./ -name "[^.]*" -delete
+    - run: shopt -u dotglob
+    - run: shopt -s extglob
+    - run: rm * !("build/")
+    - run: shopt -u extglob
     - run: mv ./build ./docs -f
     # commit and push to main to be deployed with pages
     - run: git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
