--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -28,11 +28,10 @@ jobs:
     - run: npm run build
     - run: echo "www.rudrecciah.dev" > ./build/CNAME
     # clean up build
-    - run: shopt -u dotglob
-    - run: shopt -s extglob
-    - run: rm * !("build/")
-    - run: shopt -u extglob
-    - run: mv ./build ./docs -f
+    - run: mkdir ./.build/
+    - run: mv ./build ./.build -f
+    - run: find . -name "[^.]*" -delete
+    - run: mv ./build / -f
     # commit and push to main to be deployed with pages
     - run: git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
     - run: git config --local user.name "github-actions[bot]"
