--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -30,8 +30,9 @@ jobs:
     # clean up build
     - run: mkdir ./.build/
     - run: mv ./build ./.build -f
-    - run: find . -name "[^.]*" -delete
-    - run: mv ./build / -f
+    - run: shopt -u dotglob
+    - run: rm *
+    - run: mv ./build . -f
     # commit and push to main to be deployed with pages
     - run: git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
     - run: git config --local user.name "github-actions[bot]"
