--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -31,7 +31,7 @@ jobs:
     - run: mkdir ./.build/
     - run: mv ./build ./.build -f
     - run: shopt -u dotglob
-    - run: rm *
+    - run: rm * -r
     - run: mv ./build . -f
     # commit and push to main to be deployed with pages
     - run: git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
