--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -48,9 +48,12 @@ jobs:
     - name: Deploy Production
       run: |
         cd ./temp
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
         git add .
         git commit -m "Deployed App"
         git push
+        cd ../
         rm ./temp -r
     # commit and push to main to be deployed with pages
     - name: Deploy Build
