--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -48,6 +48,9 @@ jobs:
     - name: Deploy Production
       run: |
         cd ./temp
+        eval "$(ssh-agent -s)"
+        Agent pid 59566
+        ssh-add ${{ secrets.SSH_PRIV_KEY }}
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add .
