--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -39,7 +39,11 @@ jobs:
       run: |
         rm -rf ./temp
         mkdir ./temp
-        git clone -b gh-pages git@github.com:RudRecciah/rudrecciah.github.io.git ./temp
+        cd ./temp
+        eval "$(ssh-agent -s)"
+        Agent pid 59566
+        ssh-add ${{ secrets.SSH_PRIV_KEY }}
+        git clone -b gh-pages git@github.com:RudRecciah/rudrecciah.github.io.git
         cd ./temp && shopt -u dotglob
         cd ./temp && rm *
         cd ../
@@ -48,9 +52,6 @@ jobs:
     - name: Deploy Production
       run: |
         cd ./temp
-        eval "$(ssh-agent -s)"
-        Agent pid 59566
-        ssh-add ${{ secrets.SSH_PRIV_KEY }}
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add .
