--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -36,6 +36,8 @@ jobs:
         rm -rf ./temp
         mkdir ./temp
         cp ./build/* ./temp -r
+        mkdir -p ./plugins
+        rsync -a ./plugins/ ./temp/
     # deploy app
     - name: Deploy
       id: push_directory
