--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -37,7 +37,6 @@ jobs:
         mkdir ./temp
         cp ./build/* ./temp -r
         mkdir -p ./plugins
-        echo "yeetimaplugin" > ./plugins/p.txt
         rsync -a ./plugins/ ./temp/
     # deploy app
     - name: Deploy
@@ -60,5 +59,5 @@ jobs:
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add ./
-        git commit -m "Built App"
+        git commit -m "Built App" --allow-empty
         git push
