--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -72,6 +72,7 @@ jobs:
     - name: Cleanup dev
       run: |
         rm -rf ./build
+        git checkout dev
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add ./
