--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -71,8 +71,9 @@ jobs:
         github_token: ${{ github.token }}
     - name: Cleanup dev
       run: |
+        git status
+        git checkout origin/dev
         rm -rf ./build
-        git checkout dev
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add ./
