--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.9.2",
@@ -47,5 +47,22 @@
   },
   "devDependencies": {
     "eslint-plugin-react": "^7.24.0"
-  }
+  },
+  "description": "My portfolio. ### Built with: * React * Bootstrap * Sass * and more...",
+  "main": "./public/index.html",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RudRecciah/rudrecciah.github.io.git"
+  },
+  "keywords": [
+    "rudrecciah",
+    "rud",
+    "recciah"
+  ],
+  "author": "RudRecciah",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/RudRecciah/rudrecciah.github.io/issues"
+  },
+  "homepage": "https://github.com/RudRecciah/rudrecciah.github.io#readme"
 }
