--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -48,7 +48,7 @@ jobs:
       with:
         source-directory: './temp'
         destination-github-username: 'RudRecciah'
-        destination-repository-name: 'portfolio'
+        destination-repository-name: 'rudrecciah.github.io'
         user-email: "41898282+github-actions[bot]@users.noreply.github.com"
         user-name: "github-actions[bot]"
         commit-message: "Deployed App"
