--- a/package.json
+++ b/package.json
@@ -64,5 +64,5 @@
   "bugs": {
     "url": "https://github.com/RudRecciah/rudrecciah.github.io/issues"
   },
-  "homepage": "https://github.com/RudRecciah/rudrecciah.github.io#readme"
+  "homepage": "/"
 }
